--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<img src="https://cdn.jsdelivr.net/gh/harkin666/Lin-s-Lover@latest/Bg.webp" width="100%" height="100%"/>
 	</div>
 	<div class="content">
-		<h2>小阳和三毛小林已经在一起了好久好久了啦~</h2>
+		<h2>小阳和三毛小林已经在一起了好久好久了啦❤~</h2>
 		<div class="timer">
 			<b id="d"></b> 天 <b id="h"></b> 时 <b id="m"></b> 分 <b id="s"></b> 秒
 		</div>
