--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <body>
 	<div id="Layer1" style="position:fixed; left:0px; top:0px; width:100%; height:100%">  
-		<img src="https://cdn.jsdelivr.net/gh/harkin666/Lin-s-Lover@latest/Bg.webp" width="100%" height="100%"/>
+		<img src="https://cdn.jsdelivr.net/gh/harkin666/Lin-s-Lover@latest/1.webp" width="100%" height="100%"/>
 	</div>
 	<div class="content">
 		<h2>小阳和三毛小林已经在一起了好久好久了啦❤~</h2>
@@ -101,7 +101,7 @@
         setInterval(timer, 1000);
     </script>
     <audio autoplay="autoplay" loop="loop">
-        <source src="https://cdn.jsdelivr.net/gh/harkin666/Lin-s-Lover@latest/bgm.mp3" type="audio/mpeg">
+        <source src="/" type="audio/mpeg">
     </audio>
 
 </body>
