--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             top: 25%;
             transform: translate(0, -50%);
             text-align: center;
+	    color: rgb(255, 255, 255);
         }
         
         .timer {
@@ -43,7 +44,7 @@
         }
         
         .timer b {
-            color: rgb(255, 255, 255);
+            color: rgb(253, 99, 125);
         }
     </style>
 </head>
@@ -59,7 +60,7 @@
 		</div>
 		
 		<h3>感情淡了我们再培养，无话可说了我们再找话题，觉得腻了我们重新认识，觉得累了就给彼此空间，人潮汹涌，遇到你不容易，我真的不想推开你…</h3>
-		<h1 style="color:#EA0000">真的很希望你会在我的未来里</h1>
+		<h1 style="color:#FF0000">真的很希望你会在我的未来里</h1>
 	</div>
     <script>
         function timer() {
